# ecom-image-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile.backend  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  mulu.md  pyproject.toml  streamlit_app.py
.codex/: AGENTS.md
alembic/: env.py
alembic/versions/: 20260418_01_initial_auth_and_task_schema.py  20260418_02_task_enum_alignment_for_v1_history.py  20260418_03_image_edits.py  20260420_04_schema_closure.py
backend/: main.py
backend/api/: __init__.py  assets.py  dependencies.py  detail.py  detail_jobs.py  health.py  image.py  monitoring.py  tasks.py  templates.py
backend/core/: config.py  exceptions.py  logging.py  metrics.py  middleware.py  rate_limit.py  request_context.py  response.py  security.py
backend/db/: __init__.py  base.py  enums.py  session.py  types.py
backend/repositories/: task_repository.py
backend/schemas/: auth.py  common.py  detail.py  image_edit.py  storage.py  task.py  task_v1.py
backend/services/: audit_service.py  auth_service.py  detail_copy_service.py  detail_page_job_service.py  detail_page_service.py  detail_planner_service.py  detail_prompt_service.py  detail_render_service.py  detail_runtime_service.py  image_edit_service.py  main_image_service.py  task_db_mirror_service.py  task_execution_state_service.py  task_query_service.py  task_queue_service.py  task_runtime_service.py  task_usage_record_service.py  task_usage_service.py  template_service.py
docs/: api.md  architecture.md  baseline-regression.md  celery-task-architecture.md  codebase-file-map.md  cos-integration.md  database-schema-v1.md  deployment.md  detail-page-design.md  detail-page-workflow.md  development-rules.md  evaluation-plan.md  frontend-v1-pages.md  frontend-workbench.md  image-edit-v1.md  java-developer-reading-guide.md  node-io-map.md  phase1-contract.md  phase8-final-report.md  prompts.md  providers.md  qa-rules.md  qc-policy.md  release-checklist.md  security-checklist.md  storage.md  task-migration-plan.md  v1-scope-freeze.md  workflow.md  任务.md
ecom_image_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .dockerignore  Dockerfile  index.html  nginx.default.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: main.tsx
other/: check_tunnel_ports.cmd  start_tunnel.cmd
scripts/: create_admin.py  migrate.py  run_benchmark.py  verify_postgres_schema.py
src/: __init__.py
tests/: provider_smoke_test_dashscope_image.py  provider_smoke_test_dashscope_text.py  provider_smoke_test_dashscope_vision.py  provider_smoke_test_zhipu.py
(+345 files in other folders)
